@@ -3,6 +3,7 @@ package ro.fortech.security;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Collections;
 import java.util.Map;
 
 @RestController
@@ -10,7 +11,7 @@ public class HomeController {
 
     @GetMapping
     public Map<String, String> home() {
-        return Map.of("message", "You are home");
+        return Collections.singletonMap("message", "You are home");
     }
 
 }
